2014-12-21: Niels Grewe <niels.grewe@halbordnung.de>

	* rules.make
	* Instance/Shared/java.make:
	Add as_jar option to install the jar file instead of the expanded
	class hierarchy.

2014-12-21: Niels Grewe <niels.grewe@halbordnung.de>

	* Instance/Shared/java.make
	* Instance/java.make
	* Instance/rules.make
	* Master/java.make
	* Master/rules.make
	* common.make
	* messages.make:
	Add a `jar' target to the java project type that allows jars to 
	be built from all classes in the project.
	* Documentation/gnustep-make.texi: Document Java project variables.

2014-06-29  Nicolas Boulenguez  <nicolas@debian.org>  (tiny change)

	* common.make (INTERNAL_CFLAGS): Do not ignore user-specified
          CFLAGS.

2014-06-29  Yavor Doganov  <yavor@gnu.org>

	* Documentation/GNUstep.7:
	* Documentation/debugapp.1: Typo fix.
	* Documentation/gnustep-tests.1: New.
	* GNUmakefile.in (install, uninstall): Handle gnustep-tests.1.

2014-06-07  Ivan Vucica <ivan@vucica.net>

	* Master/deb.make: Now adding gnustep-make dependency to the
	DEB_BUILD_DEPENDS only when creating _debenv file.

2014-05-11  Ivan Vucica <ivan@vucica.net>

	* GNUmakefile.in: Date-time and svn-revision suffix are now using
	the tilde character to ensure that the 'actual' commit and 'actual'
	tagged release are treated as being newer by the Debian packaging.
	Also stopped using periods in date-time.
	debfiles target will no longer be automatically run, allowing for
	build scripts to do some customization of debfiles inbetween, or
	to permit the packager maintain the debfiles separately.
	* Master/deb.make: Slightly cleaner build dependency line for
	gnustep-make. 
	The version of gnustep-make we build-depend on is now read using
	dpkg -s.
	* Master/source-distribution.make: Date-time and svn-revision
	suffix are now using the tilde character to ensure that the 
	'actual' commit and 'actual' tagged release are treated as being
	newer by the Debian packaging. Also stopped using periods in
	date-time.
